Moved "extra" configuration files and scripts into their own directory in order to keep things tidy

--- a/extras/docker-compose-dse-external.yaml
+++ b/extras/docker-compose-dse-external.yaml
@@ -12,7 +12,7 @@ services:
       SERVICE_9042_NAME: cassandra
       SERVICE_8983_NAME: dse-search
       SERVICE_8182_NAME: gremlin
-      EXTERNAL_CLUSTER_IP: $EXTERNAL_CLUSTER_IP
+      EXTERNAL_CLUSTER_IP: 192.168.0.179
       KILLRVIDEO_DOCKER_IP: $KILLRVIDEO_DOCKER_IP
       USERNAME: $KILLRVIDEO_DSE_USERNAME
-      PASSWORD: $KILLRVIDEO_DSE_PASSWORD
+      PASSWORD: $KILLRVIDEO_DSE_PASSWORD 
