changing print statements to debug logging

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,37 @@ version: '3'
 
 # Other services are specified in ./lib/killrvideo-docker-common/docker-compose.yaml
 services:
+
+  # Python service implementation
+  killrvideo-python:
+    image: killrvideo/killrvideo-python:0.1.0
+    ports:
+    - "8899:8899"
+    depends_on:
+    - dse
+    - etcd
+    environment:
+      KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
+      KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
+      KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
+      KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
+
+  # Python service implementation
+  tests:
+    image: killrvideo/killrvideo-integration-tests:1.0.0
+    ports:
+      # Zeppelin WEB UI port
+      - 8080:8080
+      # Python HTTP Web Server port
+      - 8123:8123
+    depends_on:
+      - etcd
+      - dse
+    environment:
+      KILLRVIDEO_DOCKER_IP: $KILLRVIDEO_DOCKER_IP
+      SERVICE_8080_NAME: zeppelin
+      SERVICE_8123_NAME: python_web_server
+
   # Start the KillrVideo web UI on port 3000
   web:
     image: killrvideo/killrvideo-web:1.2.8
