--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,18 +69,18 @@ services:
       KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
 
   # The sample data generator
-  #generator:
-  #  image: killrvideo/killrvideo-generator:1.2.5
-  #  depends_on:
-  #  - dse
-  #  - etcd
-  #  environment:
-  #    KILLRVIDEO_ETCD: "etcd:2379"
-  #    KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
-  #    KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
-  #    NODE_ENV: $NODE_ENV
-  #    KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
-  #    KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
+  generator:
+    image: killrvideo/killrvideo-generator:1.2.5
+    depends_on:
+    - dse
+    - etcd
+    environment:
+      KILLRVIDEO_ETCD: "etcd:2379"
+      KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
+      KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
+      NODE_ENV: $NODE_ENV
+      KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
+      KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
 
   # One instance of DataStax Studio
   studio:
