--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,19 +4,18 @@ version: '3'
 services:
 
   # Python service implementation
-  python-services:
-    image: killrvideo/killrvideo-python:0.1.0
-    ports:
-    - "8899:8899"
-    depends_on:
-    - dse
-    - etcd
-    - kafka
-    environment:
-      KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
-      KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
-      KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
-      KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
+  #killrvideo-python:
+  #  image: killrvideo/killrvideo-python:0.1.0
+  #  ports:
+  #  - "8899:8899"
+  #  depends_on:
+  #  - dse
+  #  - etcd
+  #  environment:
+  #    KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
+  #    KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
+  #    KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
+  #    KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
 
   # Python service implementation
   #tests:
@@ -46,7 +45,7 @@ services:
     depends_on:
       - zookeeper
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: $KILLRVIDEO_DOCKER_IP
+      KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "topic-kv-videoCreation:1:1,topic-kv-userCreation:1:1,topic-kv-videoRating:1:1,topic-kv-commentCreation:1:1"
