--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ python:
 
 # Build the docker image
 script:
-- ./scripts/docker-build.sh
+- docker build -t ${TRAVIS_COMMIT} .
 
 # If successful, see if we need to publish also
 after_success:
-- ./scripts/travis-publish.sh
+- test -z $TRAVIS_TAG && travis_terminate 0
+- docker tag ${TRAVIS_COMMIT} killrvideo/killrvideo-python:${TRAVIS_TAG}
+- docker login -u $DOCKER_USER -p $DOCKER_PASS
+- docker push killrvideo/killrvideo-python:${TRAVIS_TAG}
 
 # Sudo required for doing docker build
 sudo: required
