--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,22 +17,56 @@ services:
       KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
       KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
       KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
+  # Service implementation - use docker-compose-backend-external.yaml if running services in IDE
+  backend: 
+    image: killrvideo/killrvideo-python
+    ports:
+      - "50101:50101" # Exposes port to be available.
+    depends_on:
+      - dse  # Needs DSE to be running
+      - kafka
+    environment:
+      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
 
-  # Python service implementation
-  #tests:
-  #  image: killrvideo/killrvideo-integration-tests:1.0.0
-  #  ports:
-  #    # Zeppelin WEB UI port
-  #    - 8080:8080
-  #    # Python HTTP Web Server port
-  #    - 8123:8123
-  #  depends_on:
-  #    - etcd
-  #    - dse
-  #  environment:
-  #    KILLRVIDEO_DOCKER_IP: $KILLRVIDEO_DOCKER_IP
-  #    SERVICE_8080_NAME: zeppelin
-  #    SERVICE_8123_NAME: python_web_server
+  # Datastax Studio provides convenient web interface to work directly with DataStax Enterprise
+  studio:  
+    image: datastax/dse-studio:6.7.0
+    ports:
+      - "9091:9091" # Exposes port to be available externally
+    depends_on:
+      - dse # Needs DSE to be running
+    environment:
+      DS_LICENSE: accept
+
+  # DataStax Enterprise Database
+  dse: 
+    image: datastax/dse-server:6.7.4
+    command: [ -s -g ] # Run with Search and Graph capabilities enabled
+    ports: # Exposes ports to be available.
+      - "9042:9042" # Exposes DSE port
+      - "8983:8983" # Exposes DSE Search port
+      - "8182:8182" # Exposes DSE Graph port
+    environment:
+      DS_LICENSE: accept # Accept licence on start
+    cap_add:
+      - IPC_LOCK # Allow DSE to lock memory with mlock
+    ulimits:
+      memlock: -1
+
+  # One-Time Bootstrap Container, configures DSE to have required keyspaces etc.
+  dse-config: 
+    image: killrvideo/killrvideo-dse-config:3.0.0
+    depends_on:
+      - dse # Needs DSE to be running
+
+  # Sample Data Generator, imitates behaviour of users on the killrVideo website. 
+  # Adds comments and rates videos, upload new videos and so on.
+#  generator:
+#    image: killrvideo/killrvideo-generator:3.0.1
+#    depends_on:
+#      - backend # Needs Backend to be running
+#    environment:
+#      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
 
   # Ensure consistency in Kafka World
   zookeeper:
