--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
 dist: xenial # required for Python >= 3.7
-language: python
-python:
-  - "3.7"
+language: generic
 
 # Build the docker image
 script:
@@ -13,7 +11,7 @@ after_success:
   - docker tag ${TRAVIS_COMMIT} killrvideo/killrvideo-python:${TRAVIS_TAG}
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - docker push killrvideo/killrvideo-python:${TRAVIS_TAG}
-  - "[ \"$(git tag --sort=-v:refname | grep -E '^\\d+.\\d+.\\d+$' | head -n1)\" == \"$TRAVIS_TAG\" ] &&  { docker tag ${TRAVIS_COMMIT} killrvideo/killrvideo-python:latest; docker push killrvideo/killrvideo-python:latest; }"
+  - "[ \"$(git tag --sort=-v:refname | grep -P \"^\\d+.\\d+.\\d+$\" | head -n1)\" == \"$TRAVIS_TAG\" ] &&  { docker tag ${TRAVIS_COMMIT} killrvideo/killrvideo-python:latest; docker push killrvideo/killrvideo-python:latest; }"
 # Sudo required for doing docker build
 sudo: required
 services:
