--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,29 @@
 version: '3'
 
-# Other services are specified in ./lib/killrvideo-docker-common/docker-compose.yaml
+#
+# docker-compose.yaml
+#   Simple compose file for running the Python services in Docker along with other containers comprising the
+#   KillrVideo.
+#   For more complex configuration options including metrics, external volumes, OpsCenter,
+#   etc., see https://github.com/KillrVideo/killrvideo-docker-common
+#
+#   Note: the default configuration here uses the LATEST version of the killrvideo-python
+#   Docker image, which can be built using scripts/docker_build.sh.
+#
+
 services:
 
-  # Python service implementation
-  python-services:
-    image: killrvideo/killrvideo-python:0.1.0
+  web: # Web Interface
+    image: killrvideo/killrvideo-web:3.0.1
     ports:
-    - "8899:8899"
+      - "3000:3000" # Exposes port to be available externally
     depends_on:
-    - dse
-    - etcd
-    - kafka
+      - backend # Needs Backend to be running
     environment:
-      KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
-      KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
-      KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
-      KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
+      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
+
   # Service implementation - use docker-compose-backend-external.yaml if running services in IDE
-  backend: 
+  backend:
     image: killrvideo/killrvideo-python
     ports:
       - "50101:50101" # Exposes port to be available.
@@ -29,7 +34,7 @@ services:
       KILLRVIDEO_LOGGING_LEVEL: debug # More logging
 
   # Datastax Studio provides convenient web interface to work directly with DataStax Enterprise
-  studio:  
+  studio:
     image: datastax/dse-studio:6.7.0
     ports:
       - "9091:9091" # Exposes port to be available externally
@@ -39,7 +44,7 @@ services:
       DS_LICENSE: accept
 
   # DataStax Enterprise Database
-  dse: 
+  dse:
     image: datastax/dse-server:6.7.4
     command: [ -s -g ] # Run with Search and Graph capabilities enabled
     ports: # Exposes ports to be available.
@@ -54,19 +59,19 @@ services:
       memlock: -1
 
   # One-Time Bootstrap Container, configures DSE to have required keyspaces etc.
-  dse-config: 
+  dse-config:
     image: killrvideo/killrvideo-dse-config:3.0.0
     depends_on:
       - dse # Needs DSE to be running
 
-  # Sample Data Generator, imitates behaviour of users on the killrVideo website. 
+  # Sample Data Generator, imitates behaviour of users on the killrVideo website.
   # Adds comments and rates videos, upload new videos and so on.
-#  generator:
-#    image: killrvideo/killrvideo-generator:3.0.1
-#    depends_on:
-#      - backend # Needs Backend to be running
-#    environment:
-#      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
+  generator:
+    image: killrvideo/killrvideo-generator:3.0.1
+    depends_on:
+      - backend # Needs Backend to be running
+    environment:
+      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
 
   # Ensure consistency in Kafka World
   zookeeper:
@@ -74,59 +79,17 @@ services:
     ports:
       - 2181:2181
 
-  # Start the Kafka Engine for Killrvideo
+  # Start a Kafka Broker for Killrvideo
   kafka:
     image: wurstmeister/kafka
     depends_on:
       - zookeeper
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: $KILLRVIDEO_DOCKER_IP
-      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_LISTENERS: PLAINTEXT://:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "topic-kv-videoCreation:1:1,topic-kv-userCreation:1:1,topic-kv-videoRating:1:1,topic-kv-commentCreation:1:1"
     ports:
       - 9092:9092
-
-  # Start the KillrVideo web UI on port 3000
-  web:
-    image: killrvideo/killrvideo-web:2.1.0
-    ports:
-    - "3000:3000"
-    depends_on:
-    - dse
-    - etcd
-    environment:
-      SERVICE_3000_NAME: web
-      KILLRVIDEO_ETCD: "etcd:2379"
-      KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
-      KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
-      KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
-      KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
-
-  # The sample data generator
-  generator:
-    image: killrvideo/killrvideo-generator:1.2.5
-    depends_on:
-    - dse
-    - etcd
-    environment:
-      KILLRVIDEO_ETCD: "etcd:2379"
-      KILLRVIDEO_DSE_USERNAME: $KILLRVIDEO_DSE_USERNAME
-      KILLRVIDEO_DSE_PASSWORD: $KILLRVIDEO_DSE_PASSWORD
-      NODE_ENV: $NODE_ENV
-      KILLRVIDEO_CASSANDRA_REPLICATION: $KILLRVIDEO_CASSANDRA_REPLICATION
-      KILLRVIDEO_LOGGING_LEVEL: $KILLRVIDEO_LOGGING_LEVEL
-
-  # One instance of DataStax Studio
-  studio:
-    image: datastax/dse-studio:6.0.0
-    ports:
-    # The Web UI exposed to our host
-    - "9091:9091"
-    depends_on:
-    - dse
-    environment:
-      SERVICE_9091_NAME: studio
-      DS_LICENSE: accept
 
 
