--- a/scripts/docker-compose-backend-external.yaml
+++ b/scripts/docker-compose-backend-external.yaml
@@ -21,61 +21,61 @@ services:
       - backend:$KILLRVIDEO_BACKEND
 
   # Datastax Studio provides convenient web interface to work directly with DataStax Enterprise
-  studio:  
-    image: datastax/dse-studio:6.7.0
-    ports:
-      - "9091:9091" # Exposes port to be available externally
-    depends_on:
-      - dse # Needs DSE to be running
-    environment:
-      DS_LICENSE: accept
+#  studio:
+#    image: datastax/dse-studio:6.7.0
+#    ports:
+#      - "9091:9091" # Exposes port to be available externally
+#    depends_on:
+#      - dse # Needs DSE to be running
+#    environment:
+#      DS_LICENSE: accept
 
   # DataStax Enterprise Database
-  dse: 
-    image: datastax/dse-server:6.7.4
-    command: [ -s -g ] # Run with Search and Graph capabilities enabled
-    ports: # Exposes ports to be available.
-      - "9042:9042" # Exposes DSE port
-      - "8983:8983" # Exposes DSE Search port
-      - "8182:8182" # Exposes DSE Graph port
-    environment:
-      DS_LICENSE: accept # Accept licence on start
-    cap_add:
-      - IPC_LOCK # Allow DSE to lock memory with mlock
-    ulimits:
-      memlock: -1
+#  dse:
+#    image: datastax/dse-server:6.7.4
+#    command: [ -s -g ] # Run with Search and Graph capabilities enabled
+#    ports: # Exposes ports to be available.
+#      - "9042:9042" # Exposes DSE port
+#      - "8983:8983" # Exposes DSE Search port
+#      - "8182:8182" # Exposes DSE Graph port
+#    environment:
+#      DS_LICENSE: accept # Accept licence on start
+#    cap_add:
+#      - IPC_LOCK # Allow DSE to lock memory with mlock
+#    ulimits:
+#      memlock: -1
 
   # One-Time Bootstrap Container, configures DSE to have required keyspaces etc.
-  dse-config: 
-    image: killrvideo/killrvideo-dse-config:3.0.0
-    depends_on:
-      - dse # Needs DSE to be running
+#  dse-config:
+#    image: killrvideo/killrvideo-dse-config:3.0.0
+#    depends_on:
+#      - dse # Needs DSE to be running
 
   # Sample Data Generator, imitates behaviour of users on the killrVideo website. 
   # Adds comments and rates videos, upload new videos and so on.
-  generator: 
-    image: killrvideo/killrvideo-generator:3.0.1
-    environment:
-      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
-    extra_hosts:
-      - backend:$KILLRVIDEO_BACKEND
+#  generator:
+#    image: killrvideo/killrvideo-generator:3.0.1
+#    environment:
+#      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
+#    extra_hosts:
+#      - backend:$KILLRVIDEO_BACKEND
 
   # Ensure consistency in Kafka World
-  zookeeper:
-    image: wurstmeister/zookeeper
-    ports:
-      - 2181:2181
+#  zookeeper:
+#    image: wurstmeister/zookeeper
+#    ports:
+#      - 2181:2181
 
   # Start a Kafka Broker for Killrvideo
-  kafka:
-    image: wurstmeister/kafka
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_LISTENERS: PLAINTEXT://:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://$KILLRVIDEO_BACKEND:9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "topic-kv-videoCreation:1:1,topic-kv-userCreation:1:1,topic-kv-videoRating:1:1,topic-kv-commentCreation:1:1"
-    ports:
-      - 9092:9092
+#  kafka:
+#    image: wurstmeister/kafka
+#    depends_on:
+#      - zookeeper
+#    environment:
+#      KAFKA_LISTENERS: PLAINTEXT://:9092
+#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://$KILLRVIDEO_BACKEND:9092
+#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+#      KAFKA_CREATE_TOPICS: "topic-kv-videoCreation:1:1,topic-kv-userCreation:1:1,topic-kv-videoRating:1:1,topic-kv-commentCreation:1:1"
+#    ports:
+#      - 9092:9092
 
